@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="../lib/bukkit-0.0.1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="../lib/craftbukkit-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="../lib/bukkit.jar"/>
+	<classpathentry kind="lib" path="../lib/craftbukkit.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/EssentialsGroupManager"/>
 	<classpathentry kind="lib" path="../lib/Permissions3.jar"/>
 	<classpathentry kind="output" path="bin"/>
